--- a/index.html
+++ b/index.html
@@ -5,22 +5,24 @@
       <title>Tech Job Academy</title>
     </head>
     <body>
-      <div class="hero">
-        <header>
-          <img src="http://placehold.it/1410x350">
-          <nav>
-            <ul>
-              <li><a href="#" title="">OVERVIEW</a></li>
-              <li><a href="#" title="">CURRICULUM</a></li>
-              <li><a href="#" title="">APPLICATION PROCESS</a></li>
-              <li><a href="#" title="">KEY DATES</a></li>
-            </ul>
-          </nav>
-          <h1>Tech Job Academy</h1>
-          <p>An intensive, 16-week techincal training program preparing underemployed and unemployed NYC resident for in-demand tech jobs.</p>
-          <button type="">APPLY</button>
-        </header>
+      <header>
+      <div class="nav-bar">
+        <nav>
+          <ul>
+            <li><a href="#" title="">OVERVIEW</a></li>
+            <li><a href="#" title="">CURRICULUM</a></li>
+            <li><a href="#" title="">APPLICATION PROCESS</a></li>
+            <li><a href="#" title="">KEY DATES</a></li>
+          </ul>
+        </nav>  
       </div>
+        <div class="hero">
+            <img src="http://placehold.it/1410x350">
+            <h1>Tech Job Academy</h1>
+            <p>An intensive, 16-week techincal training program preparing underemployed and unemployed NYC resident for in-demand tech jobs.</p>
+            <button type="">APPLY</button>
+        </div>
+      </header>
 
       <div class="overview">
         <section>
@@ -31,10 +33,27 @@
             <img src="http://placehold.it/140x100"><h3>Seats</h3>
             <img src="http://placehold.it/140x100"><h3>Tuition</h3>
             <img src="http://placehold.it/140x100"><h3>Address</h3>
-            <form action="mail-chimp">
-              <input type="text" name="email" value="">
-              <input type="submit" value="SIGN UP">
-          </form>
+            <div class="mail-signup">
+              <!-- Begin MailChimp Signup Form -->
+              <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+              <style type="text/css">
+                #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;  width:400px;}
+                /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+                   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+              </style>
+              <div id="mc_embed_signup">
+              <form action="//github.us11.list-manage.com/subscribe/post?u=7b0ad64534cbb723ba1449cff&amp;id=b7740812a4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                  <div id="mc_embed_signup_scroll">
+                <label for="mce-EMAIL">Subscribe to our mailing list</label><br>
+                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                  <div style="position: absolute; left: -5000px;"><input type="text" name="b_7b0ad64534cbb723ba1449cff_b7740812a4" tabindex="-1" value=""></div>
+                  <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                  </div>
+              </form>
+              </div>
+            </div>
+            
         </section>
       </div>
 
@@ -99,7 +118,7 @@
            <h3>Class Start</h3>
             &#8226;
            <h4>OCTOBER 5</h4>
-           
+
         </section>
       </div>
       <div class="footer">
