--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <body>
       <header>
       <div class="nav-bar">
+        <div class="logo">
+            <img src="http://placehold.it/100x65">
+        </div>
         <nav>
           <ul>
             <li><a href="#" title="">OVERVIEW</a></li>
