--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         </div>
         <nav>
           <ul>
-            <li><a href="#" title="">OVERVIEW</a></li>
-            <li><a href="#" title="">CURRICULUM</a></li>
-            <li><a href="#" title="">APPLICATION PROCESS</a></li>
-            <li><a href="#" title="">KEY DATES</a></li>
+            <li><a href="#" title="OVERVIEW">OVERVIEW</a></li>
+            <li><a href="#" title="CURRICULUM">CURRICULUM</a></li>
+            <li><a href="#" title="APPLICATION PROCESS">APPLICATION PROCESS</a></li>
+            <li><a href="#" title="KEY DATES">KEY DATES</a></li>
           </ul>
         </nav>  
       </div>
