--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img src="http://placehold.it/1410x350">
             <h1>Tech Job Academy</h1>
             <p>An intensive, 16-week techincal training program preparing underemployed and unemployed NYC resident for in-demand tech jobs.</p>
-            <button type="">APPLY</button>
+            <button><a href="#" title="APPLY">APPLY</a></button>
         </div>
       </header>
 
