--- a/index.html
+++ b/index.html
@@ -26,39 +26,36 @@
             <button><a href="#" title="APPLY">APPLY</a></button>
         </div>
       </header>
-
-      <div class="overview">
-        <section>
-          <h2>OVERVIEW</h2>
-          <p>Tech Jobs Academy is a public-private partnership between Microsoft, CUNY's City Tech, and the Tech Talent Pipline. This technical training program targets passionate underemployed and unemployed NYC resident ready to launch a new tech career.</p>
-          <p>Student will spend 16 weeks developing highly sought-after skills in cloud and server administration, and gaining career development skills to land a job upon program completion.</p>
-            <img src="http://placehold.it/140x100"><h3>Curriculum</h3>
-            <img src="http://placehold.it/140x100"><h3>Seats</h3>
-            <img src="http://placehold.it/140x100"><h3>Tuition</h3>
-            <img src="http://placehold.it/140x100"><h3>Address</h3>
-            <div class="mail-signup">
-              <!-- Begin MailChimp Signup Form -->
-              <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
-              <style type="text/css">
-                #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;  width:400px;}
-                /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-                   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-              </style>
-              <div id="mc_embed_signup">
-              <form action="//github.us11.list-manage.com/subscribe/post?u=7b0ad64534cbb723ba1449cff&amp;id=b7740812a4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                  <div id="mc_embed_signup_scroll">
-                <label for="mce-EMAIL">Subscribe to our mailing list</label><br>
-                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                  <div style="position: absolute; left: -5000px;"><input type="text" name="b_7b0ad64534cbb723ba1449cff_b7740812a4" tabindex="-1" value=""></div>
-                  <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-                  </div>
-              </form>
-              </div>
+      <section class="overview">
+        <h2>OVERVIEW</h2>
+        <p>Tech Jobs Academy is a public-private partnership between Microsoft, CUNY's City Tech, and the Tech Talent Pipline. This technical training program targets passionate underemployed and unemployed NYC resident ready to launch a new tech career.</p>
+        <p>Student will spend 16 weeks developing highly sought-after skills in cloud and server administration, and gaining career development skills to land a job upon program completion.</p>
+          <img src="http://placehold.it/140x100"><h3>Curriculum</h3>
+          <img src="http://placehold.it/140x100"><h3>Seats</h3>
+          <img src="http://placehold.it/140x100"><h3>Tuition</h3>
+          <img src="http://placehold.it/140x100"><h3>Address</h3>
+          <div class="mail-signup">
+            <!-- Begin MailChimp Signup Form -->
+            <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+            <style type="text/css">
+              #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;  width:400px;}
+              /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+                 We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+            </style>
+            <div id="mc_embed_signup">
+            <form action="//github.us11.list-manage.com/subscribe/post?u=7b0ad64534cbb723ba1449cff&amp;id=b7740812a4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+              <label for="mce-EMAIL">Subscribe to our mailing list</label><br>
+              <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;"><input type="text" name="b_7b0ad64534cbb723ba1449cff_b7740812a4" tabindex="-1" value=""></div>
+                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                </div>
+            </form>
             </div>
-            
-        </section>
-      </div>
+          </div> 
+      </section>
+    
 
       <div class="curriculum">
         <section>
