adds div image blurbs

--- a/index.html
+++ b/index.html
@@ -30,10 +30,18 @@
         <h2>OVERVIEW</h2>
         <p>Tech Jobs Academy is a public-private partnership between Microsoft, CUNY's City Tech, and the Tech Talent Pipline. This technical training program targets passionate underemployed and unemployed NYC resident ready to launch a new tech career.</p>
         <p>Student will spend 16 weeks developing highly sought-after skills in cloud and server administration, and gaining career development skills to land a job upon program completion.</p>
-          <img src="http://placehold.it/140x100"><h3>Curriculum</h3>
-          <img src="http://placehold.it/140x100"><h3>Seats</h3>
-          <img src="http://placehold.it/140x100"><h3>Tuition</h3>
-          <img src="http://placehold.it/140x100"><h3>Address</h3>
+          <div class="image-blurbs">
+            <img src="http://placehold.it/140x100"><h3>Curriculum</h3>
+          </div>
+          <div class="image-blurbs">
+            <img src="http://placehold.it/140x100"><h3>Seats</h3>
+          </div>
+          <div class="image-blurbs">
+            <img src="http://placehold.it/140x100"><h3>Tuition</h3>
+          </div>
+          <div class="image-blurbs">
+            <img src="http://placehold.it/140x100"><h3>Address</h3>
+          </div>
           <div class="mail-signup">
             <!-- Begin MailChimp Signup Form -->
             <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
