--- a/index.html
+++ b/index.html
@@ -89,20 +89,22 @@
       </section>
       <section class="application">
          <h2>APPLICATION PROCESS</h2>
-         <ol>
-           <li>
-             <h3>Check your eligibility</h3>
-             <p>Do you meet the following criteria</p>
-           </li>
-           <li>
-             <h3>Fill out application form</h3>
-             <p>The application helps us get to know you better. Answer questions about your interest in technology and what gets you excited about the program.</p>
-           </li>
-           <li>
-             <h3>Take entrace assessment</h3>
-             <p>Learn the fundamentals of networking and take this online entrace assessment to prove your knowledge.</p>
-           </li>
-         </ol>
+         <div class="application-steps">
+           <ol>
+             <li>
+               <h3>Check your eligibility</h3>
+               <p>Do you meet the following criteria</p>
+             </li>
+             <li>
+               <h3>Fill out application form</h3>
+               <p>The application helps us get to know you better. Answer questions about your interest in technology and what gets you excited about the program.</p>
+             </li>
+             <li>
+               <h3>Take entrace assessment</h3>
+               <p>Learn the fundamentals of networking and take this online entrace assessment to prove your knowledge.</p>
+             </li>
+           </ol>  
+         </div>
          <h3>Eligibility Requirements</h3>
          <ul>
            <li>at least 18 years old</li>
