--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="utf-8">
-  <link href="./stylesheets/style.css.scss" rel="stylesheet">
+  <link href="./stylesheets/style.css" rel="stylesheet">
   <title></title>
 </head>
 <body>
