adds div and button

--- a/index.html
+++ b/index.html
@@ -105,16 +105,18 @@
              </li>
            </ol>  
          </div>
-         <h3>Eligibility Requirements</h3>
-         <ul>
-           <li>at least 18 years old</li>
-           <li>less than $50K salary</li>
-           <li>less than a 4-year degree</li>
-           <li>NYC resident</li>
-           <li>meet all federal selective service requirements</li>
-         </ul>
+         <div class="eligibility">
+           <h3>Eligibility Requirements</h3>
+           <ul>
+             <li>at least 18 years old</li>
+             <li>less than $50K salary</li>
+             <li>less than a 4-year degree</li>
+             <li>NYC resident</li>
+             <li>meet all federal selective service requirements</li>
+           </ul>
+         </div>
         <p>Selective service link for information about selective service</p>
-        <button type="">APPLY</button> 
+        <button><a href="#" title="APPLY">APPLY</a></button>
       </section>   
       
 
