--- a/index.html
+++ b/index.html
@@ -117,11 +117,9 @@
          </div>
         <p>Selective service link for information about selective service</p>
         <button><a href="#" title="APPLY">APPLY</a></button>
-      </section>   
-      
-
-      <div class="keyDates">
-        <section>
+      </section>    
+      <section class="keyDates">
+        <div class="timeline-event">
            <h2>KEY DATES</h2>
 
            <h3>Application Open</h3>
@@ -139,18 +137,15 @@
            <h3>Class Start</h3>
             &#8226;
            <h4>OCTOBER 5</h4>
-
-        </section>
-      </div>
-      <div class="footer">
-        <section>
-           <footer>
-             <p>Microsoft</p>
-             <p>CUNY City Tech</p>
-             <p>CUNY City Tech</p>
-             <p>NYC Tech Talent Pipeline</p>
-           </footer>
-        </section>
+        </div>
+      </section>
+        <footer>
+          <section class="footer">
+            <a href="#" title="Microsoft"><img src="http://placehold.it/140x100"></a>
+            <a href="#" title="CUNY City Tech"><img src="http://placehold.it/140x100"></a>
+            <a href="#" title="NYC Tech Talent Pipeline"><img src="http://placehold.it/140x100"></a>
+          </section>
+        </footer>
       </div>
     </body>
   </html>
