fixed div for logo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
       <header>
       <div class="nav-bar">
-        <div class="logo">
+        <div class="logo"></div>
             <img src="http://placehold.it/100x65">
         </div>
         <nav>
