--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>Tech Jobs Academy is a public-private partnership between Microsoft, CUNY's City Tech, and the Tech Talent Pipline. This technical training program targets passionate underemployed and unemployed NYC resident ready to launch a new tech career.</p>
         <p>Student will spend 16 weeks developing highly sought-after skills in cloud and server administration, and gaining career development skills to land a job upon program completion.</p>
           <div class="image-blurbs">
-            <img src="http://placehold.it/140x100"><h3>Curriculum</h3>
+            <img src="http://placehold.it/140x100"><h3>Oct5th- Feb16th</h3>
           </div>
           <div class="image-blurbs">
             <img src="http://placehold.it/140x100"><h3>Seats</h3>
