changes image-blurb & key dates & timeline

--- a/index.html
+++ b/index.html
@@ -30,16 +30,19 @@
         <h2>OVERVIEW</h2>
         <p>Tech Jobs Academy is a public-private partnership between Microsoft, CUNY's City Tech, and the Tech Talent Pipline. This technical training program targets passionate underemployed and unemployed NYC resident ready to launch a new tech career.</p>
         <p>Student will spend 16 weeks developing highly sought-after skills in cloud and server administration, and gaining career development skills to land a job upon program completion.</p>
-          <div class="image-blurbs">
+          <div class="image-blurb">
             <img src="http://placehold.it/140x100"><h3>Oct5th- Feb16th</h3>
+            <p>9AM-5PM</p>
           </div>
-          <div class="image-blurbs">
-            <img src="http://placehold.it/140x100"><h3>Seats</h3>
+          <div class="image-blurb">
+            <img src="http://placehold.it/140x100"><h3>Open Seats</h3>
+            <p>avialable</p>
           </div>
-          <div class="image-blurbs">
-            <img src="http://placehold.it/140x100"><h3>Tuition</h3>
+          <div class="image-blurb">
+            <img src="http://placehold.it/140x100"><h3>free</h3>
+            <p>Tuition</p>
           </div>
-          <div class="image-blurbs">
+          <div class="image-blurb">
             <img src="http://placehold.it/140x100"><h3>Address</h3>
           </div>
           <div class="mail-signup">
@@ -68,22 +71,22 @@
       
       <section class="curriculum">
          <h2>CURRICULUM</h2>
-         <div class="image-blurbs">
+         <div class="image-blurb">
            <img src="http://placehold.it/140x100"><h3>Curriculum Info 1</h3><p>Info blub</p>
          </div>
-         <div class="image-blurbs">
+         <div class="image-blurb">
            <img src="http://placehold.it/140x100"><h3>Curriculum Info 2</h3><p>Info blub</p>
          </div>
-         <div class="image-blurbs">
+         <div class="image-blurb">
            <img src="http://placehold.it/140x100"><h3>Curriculum Info 3</h3><p>Info blub</p>
          </div>
-         <div class="image-blurbs">
+         <div class="image-blurb">
            <img src="http://placehold.it/140x100"><h3>Curriculum Info 4</h3><p>Info blub</p>
          </div>
-         <div class="image-blurbs">
+         <div class="image-blurb">
            <img src="http://placehold.it/140x100"><h3>Curriculum Info 5</h3><p>Info blub</p>
          </div>
-         <div class="image-blurbs">
+         <div class="image-blurb">
            <img src="http://placehold.it/140x100"><h3>Curriculum Info 6</h3><p>Info blub</p>  
          </div>
       </section>
@@ -118,25 +121,29 @@
         <p>Selective service link for information about selective service</p>
         <button><a href="#" title="APPLY">APPLY</a></button>
       </section>    
-      <section class="keyDates">
-        <div class="timeline-event">
+      <section class="key-dates">
+        <div class="timeline">
            <h2>KEY DATES</h2>
-
-           <h3>Application Open</h3>
-            &#8226;
-           <h4>JULY 24</h4>
-
-           <h3>Info Session</h3>
-            &#8226;
-           <h4>AUGUST 8</h4>
-
-           <h3>Application Close</h3>
-            &#8226;
-           <h4>AUGUST 28</h4>
-
-           <h3>Class Start</h3>
-            &#8226;
-           <h4>OCTOBER 5</h4>
+           <div class="key-date">
+             <h3>Application Open</h3>
+              &#8226;
+             <h4>JULY 24</h4>
+           </div>
+           <div class="key-date">
+             <h3>Info Session</h3>
+              &#8226;
+             <h4>AUGUST 8</h4>             
+           </div>
+           <div class="timeline-event">
+             <h3>Application Close</h3>
+              &#8226;
+             <h4>AUGUST 28</h4>
+           </div>
+           <div class="timeline-event">
+             <h3>Class Start</h3>
+              &#8226;
+             <h4>OCTOBER 5</h4>
+           </div>
         </div>
       </section>
         <footer>
