--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     </head>
     <body>
       <header>
-      <div class="nav-bar">
-        <div class="logo"></div>
-            <img src="http://placehold.it/100x65">
+        <div class="nav-bar">
+          <div class="logo">
+              <img src="http://placehold.it/100x65">
+          </div>
+          <nav>
+            <ul>
+              <li><a href="#" title="OVERVIEW">OVERVIEW</a></li>
+              <li><a href="#" title="CURRICULUM">CURRICULUM</a></li>
+              <li><a href="#" title="APPLICATION PROCESS">APPLICATION PROCESS</a></li>
+              <li><a href="#" title="KEY DATES">KEY DATES</a></li>
+            </ul>
+          </nav>  
         </div>
-        <nav>
-          <ul>
-            <li><a href="#" title="OVERVIEW">OVERVIEW</a></li>
-            <li><a href="#" title="CURRICULUM">CURRICULUM</a></li>
-            <li><a href="#" title="APPLICATION PROCESS">APPLICATION PROCESS</a></li>
-            <li><a href="#" title="KEY DATES">KEY DATES</a></li>
-          </ul>
-        </nav>  
-      </div>
         <div class="hero">
             <img src="http://placehold.it/1410x350">
             <h1>Tech Job Academy</h1>
@@ -66,9 +66,7 @@
             </div>
           </div> 
       </section>
-    
 
-      
       <section class="curriculum">
          <h2>CURRICULUM</h2>
          <div class="image-blurb">
@@ -90,6 +88,7 @@
            <img src="http://placehold.it/140x100"><h3>Curriculum Info 6</h3><p>Info blub</p>  
          </div>
       </section>
+
       <section class="application">
          <h2>APPLICATION PROCESS</h2>
          <div class="application-steps">
@@ -120,7 +119,8 @@
          </div>
         <p>Selective service link for information about selective service</p>
         <button><a href="#" title="APPLY">APPLY</a></button>
-      </section>    
+      </section>   
+
       <section class="key-dates">
         <div class="timeline">
            <h2>KEY DATES</h2>
@@ -146,13 +146,10 @@
            </div>
         </div>
       </section>
-        <footer>
-          <section class="footer">
-            <a href="#" title="Microsoft"><img src="http://placehold.it/140x100"></a>
-            <a href="#" title="CUNY City Tech"><img src="http://placehold.it/140x100"></a>
-            <a href="#" title="NYC Tech Talent Pipeline"><img src="http://placehold.it/140x100"></a>
-          </section>
-        </footer>
-      </div>
+      <footer>
+        <a href="#" title="Microsoft"><img src="http://placehold.it/140x100"></a>
+        <a href="#" title="CUNY City Tech"><img src="http://placehold.it/140x100"></a>
+        <a href="#" title="NYC Tech Talent Pipeline"><img src="http://placehold.it/140x100"></a>
+      </footer>
     </body>
   </html>
