--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </nav>
   <h1>Tech Job Academy</h1>
   <p>An intensive, 16-week techincal training program preparing underemployed and unemployed NYC resident for in-demand tech jobs.</p>
-  <button type="">APPLY</button>
+  <button id="long-button" type="">APPLY</button>
 </header>
   <h2>OVERVIEW</h2>
   <p>Tech Jobs Academy is a public-private partnership between Microsoft, CUNY's City Tech, and the Tech Talent Pipline. This technical training program targets passionate underemployed and unemployed NYC resident ready to launch a new tech career.</p>
