styling all buttons

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- <img src="" alt=""> Address--><h3>Address</h3>
     <form action="mail-chimp">
       <input type="text" name="email" value="">
-      <input type="submit" value="SIGN UP">
+      <input type="submit" id="short-button" value="SIGN UP">
   </form>
    <h2>CURRICULUM</h2>
    <!-- <img src="" alt=""> Curriculum--><h3>Curriculum Info 1</h3><p>Info blub</p>
@@ -60,7 +60,7 @@
      <li>meet all federal selective service requirements</li>
    </ul>
   <p>Selective service link for information about selective service</p>
-  <button type="">APPLY</button>
+  <button id="long-button" type="">APPLY</button>
    <h2>KEY DATES</h2>
    <h3>Application Open</h3>
    <h4>JULY 24</h4>
