--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
   <meta charset="utf-8">
   <link href="./stylesheets/style.css" rel="stylesheet">
+  <link href='http://fonts.googleapis.com/css?family=Roboto:500,400' rel='stylesheet' type='text/css'>
   <title></title>
 </head>
 <body>
