Responds to PR comments

--- a/index.html
+++ b/index.html
@@ -13,25 +13,23 @@
             <img src="http://placehold.it/100x65">
           </div>
           <nav>
-            <div id="navbar">
               <ul>
                 <li><a href="#" title="OVERVIEW">OVERVIEW</a></li>
                 <li><a href="#" title="CURRICULUM">CURRICULUM</a></li>
                 <li><a href="#" title="APPLICATION PROCESS">APPLICATION PROCESS</a></li>
                 <li><a href="#" title="KEY DATES">KEY DATES</a></li>
               </ul>
-            </div>
           </nav>  
         </div>
         <div class="hero">
             <img src="http://placehold.it/1410x350">
-            <h1>Tech Job Academy</h1>
-            <p>An intensive, 16-week techincal training program preparing underemployed and unemployed NYC resident for in-demand tech jobs.</p>
+            <h1>Tech Jobs Academy</h1>
+            <p>An intensive, 16-week technical training program preparing underemployed and unemployed NYC resident for in-demand tech jobs.</p>
             <button id="long-button"><a href="#" title="APPLY">APPLY</a></button>
         </div>
       </header>
       <section class="overview">
-        <h2 class="green-rect">OVERVIEW</h2>
+        <h2>OVERVIEW</h2>
         <p>Tech Jobs Academy is a public-private partnership between Microsoft, CUNY's City Tech, and the Tech Talent Pipline. This technical training program targets passionate underemployed and unemployed NYC resident ready to launch a new tech career.</p>
         <p>Student will spend 16 weeks developing highly sought-after skills in cloud and server administration, and gaining career development skills to land a job upon program completion.</p>
           <div class="image-blurb">
