fixing pull changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <body>
       <header>
         <div class="hero">
-        <!-- moved nav-bar in hero to get nav under background image -->
           <div class="nav-bar">
             <div class="logo">
               <img src="http://placehold.it/100x65">
@@ -22,14 +21,13 @@
               </ul>
             </nav>  
           </div>
-              <!-- <img src="http://placehold.it/1410x350"> -->
           <div class="hero-blurb">
-              <h1>Tech Job Academy</h1>
-              <p>An intensive, 16-week techincal training program preparing underemployed and unemployed NYC resident for in-demand tech jobs.</p>
-              <button><a href="#" title="APPLY">APPLY</a></button>
-            </div>
+            <h1>Tech Job Academy</h1>
+            <p>An intensive, 16-week techincal training program preparing underemployed and unemployed NYC resident for in-demand tech jobs.</p>
+            <button><a href="#" title="APPLY">APPLY</a></button>
           </div>
         </div>
+      </div>
       </header>
       <section class="overview">
         <h2>OVERVIEW</h2>
@@ -79,22 +77,28 @@
         <h2>CURRICULUM</h2>
         <div class="curriculum-blurbs">
           <div class="image-blurb">
-            <img src="http://placehold.it/140x100"><h3>Curriculum Info 1</h3><p>Info blub</p>
+            <img src="http://placehold.it/140x100"><h3>Curriculum Info 1</h3>
+            <p>Info blub</p>
           </div>
            <div class="image-blurb">
-            <img src="http://placehold.it/140x100"><h3>Curriculum Info 2</h3><p>Info blub</p>
+            <img src="http://placehold.it/140x100"><h3>Curriculum Info 2</h3>
+            <p>Info blub</p>
           </div>
           <div class="image-blurb">
-            <img src="http://placehold.it/140x100"><h3>Curriculum Info 3</h3><p>Info blub</p>
+            <img src="http://placehold.it/140x100"><h3>Curriculum Info 3</h3>
+            <p>Info blub</p>
           </div>
           <div class="image-blurb">
-            <img src="http://placehold.it/140x100"><h3>Curriculum Info 4</h3><p>Info blub</p>
+            <img src="http://placehold.it/140x100"><h3>Curriculum Info 4</h3>
+            <p>Info blub</p>
           </div>
           <div class="image-blurb">
-            <img src="http://placehold.it/140x100"><h3>Curriculum Info 5</h3><p>Info blub</p>
+            <img src="http://placehold.it/140x100"><h3>Curriculum Info 5</h3>
+            <p>Info blub</p>
           </div>
           <div class="image-blurb">
-            <img src="http://placehold.it/140x100"><h3>Curriculum Info 6</h3><p>Info blub</p>  
+            <img src="http://placehold.it/140x100"><h3>Curriculum Info 6</h3>
+            <p>Info blub</p>  
           </div>
         </div>
       </section>
@@ -115,6 +119,10 @@
               <li>
                 <h3>Take entrace assessment</h3>
                 <p>Learn the fundamentals of networking and take this online entrace assessment to prove your knowledge.</p>
+              </li>
+              <li>
+                <h3>Interview</h3>
+                <p>Selected candidates will be invited to interview for a spot in the cohort.</p>
               </li>
             </ol>  
           </div>
