--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
           <div class="hero-blurb">
             <h1>Tech Job Academy</h1>
             <p>An intensive, 16-week techincal training program preparing underemployed and unemployed NYC resident for in-demand tech jobs.</p>
+            <div class="apply-button">
             <button id="long-button"><a href="#" title="APPLY">APPLY</a></button>
+            </div>
         </div>
       </div>
       </header>
