Fixes styling circles, spacing, text white

--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@
             <ol>
               <li>
                 <h3>Check your eligibility</h3>
-                <p>Do you meet the following criteria</p>
+                <p>Do you meet the following criteria?</p>
               </li>
               <li>
                 <h3>Fill out application form</h3>
                 <p>The application helps us get to know you better. Answer questions about your interest in technology and what gets you excited about the program.</p>
               </li>
               <li>
-                <h3>Take entrace assessment</h3>
-                <p>Learn the fundamentals of networking and take this online entrace assessment to prove your knowledge.</p>
+                <h3>Take entrance assessment</h3>
+                <p>Learn the fundamentals of networking and take this online entrance assessment to prove your knowledge.</p>
               </li>
               <li>
                 <h3>Interview</h3>
