--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div id="mc_embed_signup">
               <form action="//github.us11.list-manage.com/subscribe/post?u=7b0ad64534cbb723ba1449cff&amp;id=b7740812a4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
-                  <label for="mce-EMAIL">Subscribe to our mailing list</label><br>
+                  <label for="mce-EMAIL">Sign up to get updates on Tech Jobs Academy.</label>
                   <div id="input-box">
                     <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
                   <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
