--- a/index.html
+++ b/index.html
@@ -144,26 +144,24 @@
       </section>   
 
       <section class="key-dates">
+        <div class="line">
+        </div>
         <div class="timeline">
           <h2>KEY DATES</h2>
-          <div class="key-date">
+          <div class="key-date" id="dot1">
             <h3>Application Open</h3>
-              &#8226;
             <h4>JULY 24</h4>
           </div>
-          <div class="key-date">
+          <div class="key-date" id="dot2">
             <h3>Info Session</h3>
-              &#8226;
             <h4>AUGUST 8</h4>             
           </div>
-          <div class="key-date">
+          <div class="key-date" id="dot3">
             <h3>Application Close</h3>
-              &#8226;
             <h4>AUGUST 28</h4>
           </div>
-          <div class="key-date">
+          <div class="key-date" id="dot4">
             <h3>Class Start</h3>
-              &#8226;
             <h4>OCTOBER 5</h4>
           </div>
         </div>
