--- a/index.html
+++ b/index.html
@@ -4,14 +4,7 @@
       <meta charset="utf-8">
       <title>Tech Job Academy</title>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-      <script type="text/javascript" >
-          $.fn.MessageBox = function(msg) {
-            var clicked = "."+msg;
-          $('html, body').animate({
-                  scrollTop: $(clicked).offset().top - 35
-              }, 1000);
-          };
-      </script>
+      <script src="/javascript/main.js" type="text/javascript" charset="utf-8"></script>
       <link href="./stylesheets/style.css" rel="stylesheet">
       <link href='http://fonts.googleapis.com/css?family=Roboto:500,400,300' rel='stylesheet' type='text/css'>
     </head>
@@ -23,10 +16,10 @@
           </div>
           <nav>
             <ul>
-              <li><a href="#" onclick="$(this).MessageBox('overview')" title="OVERVIEW">OVERVIEW</a></li>
-              <li><a href="#" onclick="$(this).MessageBox('curriculum')" title="CURRICULUM">CURRICULUM</a></li>
-              <li><a href="#" onclick="$(this).MessageBox('application')" title="APPLICATION PROCESS">APPLICATION PROCESS</a></li>
-              <li><a href="#" onclick="$(this).MessageBox('key-dates')" title="KEY DATES">KEY DATES</a></li>
+              <li><a href="#overview" onclick="$(this).MessageBox('overview')" title="OVERVIEW">OVERVIEW</a></li>
+              <li><a href="#curriculum" onclick="$(this).MessageBox('curriculum')" title="CURRICULUM">CURRICULUM</a></li>
+              <li><a href="#application" onclick="$(this).MessageBox('application')" title="APPLICATION PROCESS">APPLICATION PROCESS</a></li>
+              <li><a href="#key-dates" onclick="$(this).MessageBox('key-dates')" title="KEY DATES">KEY DATES</a></li>
             </ul>
           </nav>  
         </div>
@@ -38,7 +31,7 @@
         </div>
       </div>
       </header>
-      <section class="overview">
+      <section class="overview" id="overview">
         <h2>OVERVIEW</h2>
         <p>Tech Jobs Academy is a public-private partnership between Microsoft, CUNY's City Tech, and the Tech Talent Pipline. This technical training program targets passionate underemployed and unemployed NYC resident ready to launch a new tech career.</p>
         <p>Student will spend 16 weeks developing highly sought-after skills in cloud and server administration, and gaining career development skills to land a job upon program completion.</p>
@@ -84,7 +77,7 @@
           </div> 
       </section>
 
-      <section class="curriculum">
+      <section class="curriculum" id="curriculum">
         <h2>CURRICULUM</h2>
         <div class="curriculum-blurbs">
           <div class="image-blurb">
@@ -114,7 +107,7 @@
         </div>
       </section>
 
-      <section class="application">
+      <section class="application" id="application">
         <h2>APPLICATION PROCESS</h2>
         <div class="curriculum-blurbs">
           <div class="application-steps">
@@ -152,7 +145,7 @@
         </div>
       </section>   
 
-      <section class="key-dates">
+      <section class="key-dates" id="key-dates">
         <div class="timeline">
           <h2>KEY DATES</h2>
           <div class="key-date">
