--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <html>
     <head>
       <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Tech Job Academy</title>
       <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
       <script src="./javascript/main.js" type="text/javascript" charset="utf-8"></script>
