absrtact to js file

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
           </div>
           <nav>
             <ul>
-              <li><a href="#overview" onclick="$(this).MessageBox('overview')" title="OVERVIEW">OVERVIEW</a></li>
-              <li><a href="#curriculum" onclick="$(this).MessageBox('curriculum')" title="CURRICULUM">CURRICULUM</a></li>
-              <li><a href="#application" onclick="$(this).MessageBox('application')" title="APPLICATION PROCESS">APPLICATION PROCESS</a></li>
-              <li><a href="#key-dates" onclick="$(this).MessageBox('key-dates')" title="KEY DATES">KEY DATES</a></li>
+              <li><a href="#overview" class="moveTo" title="OVERVIEW">OVERVIEW</a></li>
+              <li><a href="#curriculum" class="moveTo" title="CURRICULUM">CURRICULUM</a></li>
+              <li><a href="#application" class="moveTo" title="APPLICATION PROCESS">APPLICATION PROCESS</a></li>
+              <li><a href="#key-dates" class="moveTo" title="KEY DATES">KEY DATES</a></li>
             </ul>
           </nav>  
         </div>
