Styling icons and other spacing things

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           </nav>  
         </div>
         <div class="hero">
+          <div class="layer"></div>
           <div class="hero-blurb">
             <h1>Tech Job Academy</h1>
             <p>An intensive, 16-week techincal training program preparing underemployed and unemployed NYC resident for in-demand tech jobs.</p>
@@ -35,19 +36,21 @@
         <p>Student will spend 16 weeks developing highly sought-after skills in cloud and server administration, and gaining career development skills to land a job upon program completion.</p>
         <div class="curriculum-blurbs">
           <div class="image-blurb">
-            <img src="http://placehold.it/140x100"><h3>Oct5th- Feb16th</h3>
+            <img src="images/calendar.jpg"><h3>Oct5th- Feb16th</h3>
             <p>9AM-5PM</p>
           </div>
           <div class="image-blurb">
-            <img src="http://placehold.it/140x100"><h3>Open Seats</h3>
+            <div class="icon">25</div>
+            <h3>Open Seats</h3>
             <p>avialable</p>
           </div>
           <div class="image-blurb">
-            <img src="http://placehold.it/140x100"><h3>free</h3>
+            <div class="icon"><span class="dollar">$</span>0</div>
+            <h3>free</h3>
             <p>Tuition</p>
           </div>
           <div class="image-blurb">
-            <img src="http://placehold.it/140x100"><h3>Address</h3>
+            <img src="images/location.jpg"><h3>Address</h3>
             <p>300 Jay Street</p>
           </div>
         </div>
@@ -167,9 +170,12 @@
         </div>
       </section>
       <footer>
-        <a href="#" title="Microsoft"><img src="http://placehold.it/140x100"></a>
-        <a href="#" title="CUNY City Tech"><img src="http://placehold.it/140x100"></a>
-        <a href="#" title="NYC Tech Talent Pipeline"><img src="http://placehold.it/140x100"></a>
+      <h2>PARTNERS</h2>
+      <div class="partner-logos">
+        <a href="#" title="CUNY City Tech"><img src="images/msr.jpg"></a>
+        <a href="#" title="Microsoft"><img src="images/cuny.jpg"></a>
+        <a href="#" title="NYC Tech Talent Pipeline"><img src="images/tech_pipeline.png"></a>
+      </div>
       </footer>
     </body>
   </html>
