--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <title>Tech Job Academy</title>
       <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
-      <script src="/javascript/main.js" type="text/javascript" charset="utf-8"></script>
+      <script src="./javascript/main.js" type="text/javascript" charset="utf-8"></script>
       <link href="./stylesheets/style.css" rel="stylesheet">
       <link href='http://fonts.googleapis.com/css?family=Roboto:500,400,300' rel='stylesheet' type='text/css'>
     </head>
