Responds to comments

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p>Student will spend 16 weeks developing highly sought-after skills in cloud and server administration, and gaining career development skills to land a job upon program completion.</p>
         <div class="curriculum-blurbs">
           <div class="image-blurb">
-            <img src="images/calendar.jpg"><h3>Oct5th- Feb16th</h3>
+            <img src="./images/calendar.jpg"><h3>Oct5th- Feb16th</h3>
             <p>9AM-5PM</p>
           </div>
           <div class="image-blurb">
@@ -50,7 +50,7 @@
             <p>Tuition</p>
           </div>
           <div class="image-blurb">
-            <img src="images/location.jpg"><h3>Address</h3>
+            <img src="./images/location.jpg"><h3>Address</h3>
             <p>300 Jay Street</p>
           </div>
         </div>
@@ -172,9 +172,9 @@
       <footer>
       <h2>PARTNERS</h2>
       <div class="partner-logos">
-        <a href="#" title="CUNY City Tech"><img src="images/msr.jpg"></a>
-        <a href="#" title="Microsoft"><img src="images/cuny.jpg"></a>
-        <a href="#" title="NYC Tech Talent Pipeline"><img src="images/tech_pipeline.png"></a>
+        <a href="#" title="CUNY City Tech"><img src="./images/msr.jpg"></a>
+        <a href="#" title="Microsoft"><img src="./images/cuny.jpg"></a>
+        <a href="#" title="NYC Tech Talent Pipeline"><img src="./images/tech_pipeline.png"></a>
       </div>
       </footer>
     </body>
