--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       <header>
         <div class="nav-bar">
           <div class="logo">
-            <img src="http://placehold.it/90x35">
+            <p>TJA | Tech Jobs Academy</p>
+            <!-- <img src="http://placehold.it/90x35"> -->
           </div>
           <nav>
             <ul>
