--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <h3>Interview</h3>
                 <p>Selected candidates will be invited to interview for a spot in the cohort.</p>
               </li>
-            </ol>  
+            </ol>
           </div>
           <div class="eligibility">
             <h3>Eligibility Requirements</h3>
@@ -144,10 +144,12 @@
               <li>meet all federal selective service requirements</li>
             </ul>
             <p>Selective service link for information about selective service</p>
-            <button class="long-button"><a href="#" title="APPLY">APPLY</a></button> 
+            <div class="apply-button">
+              <button class="long-button"><a href="#" title="APPLY">APPLY</a></button> 
+            </div>
           </div>
         </div>
-      </section>   
+      </section>
 
       <section class="key-dates" id="key-dates">
         <div class="line">
@@ -160,7 +162,7 @@
           </div>
           <div class="key-date" id="dot2">
             <h3>Info Session</h3>
-            <h4>AUGUST 8</h4>             
+            <h4>AUGUST 8</h4>
           </div>
           <div class="key-date" id="dot3">
             <h3>Application Close</h3>
