--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <header>
         <div class="nav-bar">
           <div class="logo">
-            <p>TJA | Tech Jobs Academy</p>
+            <a href="#home" class="moveTo" title="TJA"><p>TJA | Tech Jobs Academy</p></a>
           </div>
           <nav>
             <ul>
@@ -24,7 +24,7 @@
             </ul>
           </nav>
         </div>
-        <div class="hero">
+        <div class="hero" id="home">
           <div class="layer"></div>
           <div class="hero-blurb">
             <h1>Tech Job Academy</h1>
