--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="hero" id="home">
           <div class="layer"></div>
           <div class="hero-blurb">
-            <h1>Tech Job Academy</h1>
+            <h1>Tech Jobs Academy</h1>
             <p>An intensive, 16-week techincal training program preparing underemployed and unemployed NYC resident for in-demand tech jobs.</p>
             <button class="long-button"><a href="#" title="APPLY">APPLY</a></button>
         </div>
@@ -125,7 +125,7 @@
                 <p>The application helps us get to know you better. Answer questions about your interest in technology and what gets you excited about the program.</p>
               </li>
               <li>
-                <h3>Take entrance assessment</h3>
+                <h3>Take assessment</h3>
                 <p>Learn the fundamentals of networking and take this online entrance assessment to prove your knowledge.</p>
               </li>
               <li>
